<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CommuteARoute</string>
    <string name="action_settings">Settings</string>
    <string name="choose_route">Choose route:</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="edit_start">Current Location</string>
    <string name="edit_end">Work</string>
    <string name="go">Go!</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="report">Report</string>
    <string name="show_map">Map</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_summary">Summary</string>
    <string name="title_alternatives">Alternatives</string>
    <string name="title_graphs">Graphs</string>
    <string name="title_activity_report">Report</string>
    <string name="title_report_simple">Simple</string>
    <string name="title_report_advanced">Advanced</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="latest_traffic">Latest Traffic Alerts</string>
    <string name="car">driving</string>
    <string name="transit">transit</string>
    <string name="bike">bicycling</string>
    <string name="walk">walking</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="home_address">HOME ADDRESS:</string>
    <string name="work_address">WORK ADDRESS:</string>
    <string name="car_make">CAR MAKE:</string>
    <string name="car_model">CAR MODEL:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_home">Change Home Address</string>
    <string name="change_work">Change Work Address</string>
    <string name="change_car_make">Change Car Make</string>
    <string name="change_car_model">Change Car Model</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="skip">Skip Tutorial</string>
    <string name="cont">Continue</string>
    <string name="title_activity_directions">Directions</string>
    <string name="stats_summary_header">Previous 30 days. Figures below are estimated using your commuting data.</string>
	<string name="stats_alt_header">Estimated cost/time of alternative transportation methods:</string>
	<string name="change">Change</string>
	
	<string-array name="graph_array">
        <item>Money Spent</item>
        <item>Commute Time</item>
        <item>Speed</item>
        <item>Distance</item>
    </string-array>
</resources>