 <RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@android:color/white"
>
  <RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:background="@drawable/navbar_background"
  >
    <RadioButton
      android:id="@+id/home_button"
      style="@style/navbar_button"
      android:drawableTop="@drawable/navbar_home_selector"
      android:text="@string/home"
    />
    <RadioButton
      android:id="@+id/stats_button"
      style="@style/navbar_button"
      android:drawableTop="@drawable/navbar_stats_selector"
      android:text="@string/stats"
      android:layout_marginLeft="5dp"
    />
    <RadioButton
      android:id="@+id/report_button"
      style="@style/navbar_button"
      android:drawableTop="@drawable/navbar_report_selector"
      android:text="@string/report"
      android:layout_marginLeft="5dp"
    />
    <RadioButton
      android:id="@+id/show_map_button"
      style="@style/navbar_button"
      android:drawableTop="@drawable/navbar_map_selector"
      android:text="@string/show_map"
      android:layout_marginLeft="5dp"
    />
    </RadioGroup>
</RelativeLayout>