<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

    <ImageButton
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/default_icon"
        android:contentDescription="@string/profile_pic"
        android:maxHeight="15sp"
        android:maxWidth="15sp" />

    <TextView
        android:id="@+id/prof_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/profile_pic"
        android:text="username" />

    <TextView
        android:id="@+id/prof_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prof_username"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/profile_pic"
        android:text="level" />

    <TextView
        android:id="@+id/prof_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_below="@+id/profile_pic"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/home_address" />

    <TextView
        android:id="@+id/prof_home_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/prof_home"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/prof_home"
        />

    <TextView
        android:id="@+id/prof_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prof_home"
        android:layout_below="@+id/prof_home"
        android:layout_marginBottom="5dp"
        android:text="@string/work_address" />

    <TextView
        android:id="@+id/prof_work_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/prof_work"
        android:layout_alignLeft="@+id/prof_home_field"
        android:layout_marginBottom="5dp"
       />

    <TextView
        android:id="@+id/prof_car_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prof_work"
        android:layout_below="@+id/prof_work"
        android:layout_marginBottom="5dp"
        android:text="@string/car_make" />

    <TextView
        android:id="@+id/prof_car_make_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/prof_car_make"
        android:layout_alignLeft="@+id/prof_work_field"
        android:layout_marginBottom="5dp"
         />

    <TextView
        android:id="@+id/prof_car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prof_car_make"
        android:layout_below="@+id/prof_car_make"
        android:layout_marginBottom="5dp"
        android:text="@string/car_model" />

    <TextView
        android:id="@+id/prof_car_model_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/prof_car_model"
        android:layout_alignLeft="@+id/prof_car_make_field"
        android:layout_marginBottom="5dp"
         />

    <Button
        android:id="@+id/change_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_below="@+id/prof_car_model"
        android:layout_marginBottom="5dp"
        android:text="@string/change_home" />

    <Button
        android:id="@+id/change_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_below="@+id/change_home"
        android:layout_marginBottom="5dp"
        android:text="@string/change_work" />

    <Button
        android:id="@+id/change_car_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_below="@+id/change_work"
        android:layout_marginBottom="5dp"
        android:text="@string/change_car_make" />

    <Button
        android:id="@+id/change_car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profile_pic"
        android:layout_below="@+id/change_car_make"
        android:text="@string/change_car_model" />

</RelativeLayout>